Fix z-indexes.  Move special spatial handling to the client.

--- a/app/assets/stylesheets/modules/dropdown.css.scss
+++ b/app/assets/stylesheets/modules/dropdown.css.scss
@@ -26,7 +26,7 @@
 }
 
 .xdsoft_datetimepicker, .xdsoft_timepicker {
-  z-index:101;
+  z-index:1000;
 }
 
 // Hide jquery.datetimepicker's year field
